// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding: location check dialog renders correctly when cancel button is clicked 1`] = `null`;

exports[`Onboarding: location check dialog renders correctly when continue button is clicked 1`] = `
.emotion-2 {
  width: 1em;
  height: 1em;
  margin: 0;
  vertical-align: middle;
  fill: currentColor;
}

<div
  aria-labelledby="components-modal-header-1"
  class="components-modal__frame woocommerce-payments__onboarding_location_check-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-1"
        >
          WooPayments
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="woocommerce-payments__onboarding_location_check-wrapper"
    >
      <div
        class="woocommerce-payments__onboarding_location_check-modal-message"
      >
        It appears you're attempting to set up WooPayments from an unsupported country. In order to complete the set up of WooPayments, your store is required to have a business entity in one of the following countries: 
        <ul
          class="woocommerce-list"
          role="menu"
        >
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  United Kingdom (UK)
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  United States (US)
                </span>
              </div>
            </div>
          </li>
        </ul>
         
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/compatibility/countries/"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Learn more
          <span
            class="components-visually-hidden emotion-0 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon emotion-2 emotion-3"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
            />
          </svg>
        </a>
         about setting up business entities in foreign countries.
      </div>
      <div
        class="woocommerce-payments__onboarding_location_check-footer"
      >
        <button
          class="components-button is-secondary is-busy"
          type="button"
        >
          Continue
        </button>
        <button
          class="components-button is-primary"
          disabled=""
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Onboarding: location check dialog renders correctly when opened 1`] = `
.emotion-2 {
  width: 1em;
  height: 1em;
  margin: 0;
  vertical-align: middle;
  fill: currentColor;
}

<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame woocommerce-payments__onboarding_location_check-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          WooPayments
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="woocommerce-payments__onboarding_location_check-wrapper"
    >
      <div
        class="woocommerce-payments__onboarding_location_check-modal-message"
      >
        It appears you're attempting to set up WooPayments from an unsupported country. In order to complete the set up of WooPayments, your store is required to have a business entity in one of the following countries: 
        <ul
          class="woocommerce-list"
          role="menu"
        >
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  United Kingdom (UK)
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  United States (US)
                </span>
              </div>
            </div>
          </li>
        </ul>
         
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/compatibility/countries/"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Learn more
          <span
            class="components-visually-hidden emotion-0 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon emotion-2 emotion-3"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
            />
          </svg>
        </a>
         about setting up business entities in foreign countries.
      </div>
      <div
        class="woocommerce-payments__onboarding_location_check-footer"
      >
        <button
          class="components-button is-secondary"
          type="button"
        >
          Continue
        </button>
        <button
          class="components-button is-primary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
